@@ -11,6 +11,7 @@ Issue #1728 Get-BcContainerApp doesn't return the appFile
 Support that bcartifactsCacheFolder, containerHelperFolder and dvdPath can be a docker volume instead of a bind mount (for performance)
 Run-AlValidation doesn't fail getting the same app in apps and previousApps (if apps in the middle of the dependency chain hasn't changed)
 Run-AlCops doesn't use previousApp if it is the same version as the app
+Issue #1704 Run-AlValidation with "preprocessorSymbols"
 
 2.0.5
 Issue #1668 Run-AlValidation fails if app filename has a comma (and there is only one app)
